# modwire-extraction

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: release.yml  workflow.yml
src/modwire_extraction/: __init__.py  _version.py  code.py  extraction.py
src/modwire_extraction/code/: __init__.py  code_map.py  query.py
src/modwire_extraction/code_map/: __init__.py  cache.py  manifest.py  models.py  serialization.py
src/modwire_extraction/dependency/: __init__.py  graph.py
src/modwire_extraction/extractors/: __init__.py  base.py  loader.py  php.py  python.py  resources.py  typescript.py
src/modwire_extraction/extractors/languages/: __init__.py  base.py  loader.py
src/modwire_extraction/extractors/languages/php/: build.php  composer.json  index.py  script.php  script.src.php  source.py
src/modwire_extraction/extractors/languages/python/: index.py  script.py  source.py
src/modwire_extraction/extractors/languages/typescript/: build.mjs  package-lock.json  package.json  script.ts  source.py  tsconfig.json
src/modwire_extraction/graph/: __init__.py
tests/: test_python_functional.py
tests/big_projects/: projects.json  run.py
tests/fixtures/typescript/src/domain/services/: callables.ts
