[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modwire-extraction"
version = "0.0.0"
description = "Extraction implementation for modwire."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
]
keywords = ["code-analysis", "dependency-graph", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pyright>=1.1",
    "pytest>=8",
    "twine>=5",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
]

[tool.pyright]
include = ["src", "typecheck"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportAbstractUsage = "error"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"modwire_extraction.extractors.languages.python" = [
    "*.py",
]
"modwire_extraction.extractors.languages.php" = [
    "*.php",
    "*.json",
    "*.lock",
]
"modwire_extraction.extractors.languages.typescript" = [
    "*.js",
    "*.json",
    "*.mjs",
    "*.ts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
