[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modwire-extraction"
version = "1.0.1"
description = "Extraction implementation for modwire."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
]
keywords = ["code-analysis", "dependency-graph", "extraction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/9orky/modwire-extraction"
Repository = "https://github.com/9orky/modwire-extraction"
Issues = "https://github.com/9orky/modwire-extraction/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pyright>=1.1",
    "pytest>=8",
    "twine>=5",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportAbstractUsage = "error"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"modwire_extraction.extractors.languages.python" = [
    "*.py",
]
"modwire_extraction.extractors.languages.php" = [
    "*.php",
    "*.json",
    "*.lock",
]
"modwire_extraction.extractors.languages.typescript" = [
    "*.js",
    "*.json",
    "*.mjs",
    "*.ts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
